Updated Dashboard and sidebar from video 21

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 body{
-    font-family: "Railway",serif;
+    font-family: "Montserrat",serif;
+    background:#f1f1f1;
 }
 .MuiBadge-badge{
     background: #ff5252 !important;
@@ -8,4 +9,21 @@ body{
 
 .ReactCollapse--collapse {
   transition: height 500ms;
+}
+
+
+::-webkit_scrollbar{
+  width:10px !important;height :10px !important;
+}
+::-webkit-scrollbar-thumb{
+  background:#c1c1c1 !important;
+}
+
+.btn-blue{
+  background-color: #3872fa;
+  color: #fff !important;
+  padding:8px 20px !important
+}
+.btn-blue:hover{
+  background-color: #3067e5 !important;
 }
